Add logger to previous classes and change response
