# src/main/java/com/restaurant/app/category/controller/CategoryController.java
@@ -3,22 +3,28 @@ package com.restaurant.app.category.controller;
 import com.restaurant.app.category.controller.dto.*;
 import com.restaurant.app.category.controller.validator.CategoryValidator;
 import com.restaurant.app.category.service.CategoryService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Optional;
 
+import static com.restaurant.app.response.ConstantValues.*;
 import static org.springframework.http.HttpStatus.CREATED;
 
 @RestController
 @RequestMapping("/categories")
 public class CategoryController {
 
+    private static final CategoryControllerMapper categoryControllerMapper = CategoryControllerMapper.INSTANCE;
+
     private final CategoryValidator categoryValidator;
 
     private final CategoryService categoryService;
 
-    private static final CategoryControllerMapper categoryControllerMapper = CategoryControllerMapper.INSTANCE;
+    private static final Logger LOGGER = LoggerFactory.getLogger(CategoryController.class);
 
     public CategoryController(CategoryService categoryService) {
         this.categoryValidator = new CategoryValidator();
@@ -34,6 +40,11 @@ public class CategoryController {
 
     @GetMapping("/{categoryId}")
     public ResponseEntity<CategoryResponse> getCategory(@PathVariable Long categoryId) {
+        if (!categoryService.existsByCategoryId(categoryId)) {
+            LOGGER.warn(CATEGORY_NOT_EXISTS);
+            return ResponseEntity.notFound().build();
+        }
+
         return categoryService.findById(categoryId)
                 .map(category -> ResponseEntity.ok().body(
                         categoryControllerMapper.categoryToCategoryResponse(category)))
@@ -41,9 +52,15 @@ public class CategoryController {
     }
 
     @PostMapping
+    @PreAuthorize("hasAuthority('ADMIN')")
     public ResponseEntity<CategoryRequestResponse> addCategory(@RequestBody CategoryRequest categoryRequest) {
-        if (categoryValidator.isCategoryRequestNotValid(categoryRequest) ||
-                categoryService.existsByPositionId(categoryRequest.positionId())) {
+        if (categoryValidator.isCategoryRequestNotValid(categoryRequest)) {
+            LOGGER.warn(INVALID_REQUEST_BODY);
+            return ResponseEntity.badRequest().build();
+        }
+
+        if (categoryService.existsByPositionId(categoryRequest.positionId())) {
+            LOGGER.warn(CATEGORY_POSITION_EXISTS);
             return ResponseEntity.badRequest().build();
         }
 
@@ -55,8 +72,10 @@ public class CategoryController {
     }
 
     @DeleteMapping("/{categoryId}")
+    @PreAuthorize("hasAuthority('ADMIN')")
     public ResponseEntity<Void> delete(@PathVariable Long categoryId) {
         if (!categoryService.existsByCategoryId(categoryId)) {
+            LOGGER.warn(CATEGORY_NOT_EXISTS);
             return ResponseEntity.notFound().build();
         }
 
@@ -66,10 +85,17 @@ public class CategoryController {
     }
 
     @PutMapping("/{categoryId}")
+    @PreAuthorize("hasAuthority('ADMIN')")
     public ResponseEntity<CategoryResponse> update(@PathVariable Long categoryId,
                                                    @RequestBody UpdateCategoryRequest updateCategoryRequest) {
         if (categoryValidator.isUpdateCategoryRequestNotValid(updateCategoryRequest)) {
+            LOGGER.warn(INVALID_REQUEST_BODY);
             return ResponseEntity.badRequest().build();
+        }
+
+        if (!categoryService.existsByCategoryId(categoryId)) {
+            LOGGER.warn(CATEGORY_NOT_EXISTS);
+            return ResponseEntity.notFound().build();
         }
 
         return categoryService.update(categoryControllerMapper.
